design/et-man-full/namespace (1).yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: easytrade
  labels:
    app.kubernetes.io/name: easytrade
    app.kubernetes.io/managed-by: kubectl
    istio-injection: enabled
