design/et-man-full/loadbalancer-private.yaml
apiVersion: v1
kind: Service
metadata:
  name: easytrade-private-lb
  namespace: easytrade
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
    service.beta.kubernetes.io/azure-load-balancer-internal-subnet: "aks-internal-subnet"
  labels:
    app: easytrade
    component: loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: frontendreverseproxy
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 3600
